2011-06-08

	* src/messageview.c
	  src/plugin.[ch]
	  src/plugin-marshal.list
	  plugin/test/test.c: added a new plug-in API: "messageview-show".

2011-06-08

	* src/compose.c
	  src/plugin.[ch]
	  src/plugin-marshal.list
	  plugin/test/test.c: added a new plug-in API: "compose-send".

2011-06-06

	* src/compose.c: compose_generate_msgid(): don't use mailbox part
	  of address directly, instead use md5 hash of random number + mailbox
	  part.

2011-06-06

	* src/compose.c: compose_send(): don't close compose window when
	  saving to outbox failed.

2011-05-18

	* libsylph/codeconv.c: conv_encode_header(): replaced alloca() with
	  g_malloc() and g_strndup().

2011-05-18

	* libsylph/folder.[ch]
	  libsylph/imap.[ch]
	  src/mainwindow.c: cancel online mode switch if active sessions
	  exist (fixes crash on offline switch while IMAP session is active).

2011-05-13

	* src/textview.c: textview_make_clickable_parts(): removed alloca()
	  and use GSList.
	* src/compose.c: removed some alloca() calls.
	* libsylph/procheader.c: removed alloca() calls.
	* libsylph/imap.c: imap_utf8_to_modified_utf7(): removed alloca()
	  calls.

2011-05-12

	* src/prefs_ui.c: removed alloca() calls.

2011-05-12

	* libsylph/prefs.h
	  libsylph/account.c
	  src/account_dialog.c: increased the prefs buffer size from 1024
	  to 8192.

2011-05-06

	* version 3.1.1

2011-03-22

	* configure.in: added the following line for newer gcc-4.5:
	  LIBS="$LIBS `$PKG_CONFIG --libs enchant`"
	  (thanks to Ricardo Mones)

2011-03-16

	* src/compose.c: changed keyboard shortcut of File/Send to prevent
	  accidental sending.

2011-03-14

	* src/summaryview.c: mark messages read when message view becomes
	  visible by Enter or Space key.

2011-03-01

	* src/addressadd.c
	  src/addrindex.c: renamed variable 'interface' to 'iface'.

2011-02-28

	* src/addressbook.c
	  src/prefs_common_dialog.c: fixed compilation problem on MinGW
	  (interface -> iface). Thanks to Hayashi.

2011-02-25

	* libsylph/defs.h