@@ -1,5 +1,11 @@
 2011-06-08
 
+	* libsylph/procmsg.[ch]
+	  libsylph/folder.c: remove queue headers when moving messages from
+	  a queue folder (fixes Debian BTS #493546).
+
+2011-06-08
+
 	* src/messageview.c
 	  src/plugin.[ch]
 	  src/plugin-marshal.list
